I was actually on the right track the whole time

--- a/css/app.css
+++ b/css/app.css
@@ -6,6 +6,21 @@
   margin-left: 1em;
 }
 
+#studentList li:first-child a.moveUp,
+#studentList li:last-child a.moveDown {
+  color: #ddd;
+  cursor: not-allowed;
+}
+
+span.studentName {
+  display: inline-block;
+  width: 15em;
+}
+
+span[sontenteditable=true] {
+  border: 1px solid #ccc;
+}
+
 span.actions {
   display: inline-block;
   float:  right;
