--- a/css/app.css
+++ b/css/app.css
@@ -14,11 +14,13 @@
 
 span.studentName {
   display: inline-block;
+  padding: 1px;
   width: 15em;
 }
 
 span[sontenteditable=true] {
   border: 1px solid #ccc;
+  padding: 0;
 }
 
 span.actions {
